--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,5 +1,31 @@
+body {
+  margin: 0;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+}
+
+h1 {
+  width: 10%;
+  font-family: 'Merriweather', serif;
+  margin: 0 auto 0 auto;
+}
+
+h2 {
+  width: 10%;
+  font-family: 'Roboto', sans-serif;
+  margin: 0 auto 0 auto;
+}
+
+h3 {
+  width: 10%;
+  font-family: 'Roboto', sans-serif;
+  margin: 0 auto 0 auto;
+}
+
 .top-container {
   background-color: #88E0EF;
+  position: relative;
+  padding-top: 100px;
 }
 
 .middle-container {
@@ -12,4 +38,17 @@
   height: 200px;
   width: 200px;
   background-color: yellow;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+  visibility: visible;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
