--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,54 +1,153 @@
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
 }
 
 h1 {
-  width: 10%;
+  font-size: 5.625rem;
+  color: #66BFBF;
   font-family: 'Merriweather', serif;
-  margin: 0 auto 0 auto;
+  margin: 50px auto 0 auto;
 }
 
 h2 {
-  width: 10%;
-  font-family: 'Roboto', sans-serif;
-  margin: 0 auto 0 auto;
+  color: #66BFBF;
+  font-family: 'Lato', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  padding-bottom: 10px;
 }
 
 h3 {
-  width: 10%;
-  font-family: 'Roboto', sans-serif;
-  margin: 0 auto 0 auto;
+  color: #11999E;
+  font-family: 'Mochiy Pop P One', serif;
+  font-weight: lighter;
+  font-size: 30px;
+
+}
+
+hr {
+    height: 2px;
+    width: 3%;
+    border: dotted #EAF6F6;
+    border-width: 0 0 7px;
+}
+
+p {
+  color: #40514E;
+  font-family: 'Lato', serif;
+  font-size: 25px;
+  font-weight: bolder;
+}
+
+.footer-link {
+  color: #11999E;
+  font-family: 'Lato', sans-serif;
+  margin: 10px 20px;
+  font-weight: bolder;
+  font-size: 25px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #EAF6F6
+}
+
+.doggy-image {
+  margin-bottom: 50px;
+
 }
 
 .top-container {
-  background-color: #88E0EF;
+  background-color: #EAF6F6;
   position: relative;
   padding-top: 100px;
 }
 
-.middle-container {
-  height: 200px;
-  width: 200px;
-  background-color: red;
-}
+.personal-image {
+  float:inherit;
 
-.bottom-container {
-  height: 200px;
-  width: 200px;
-  background-color: yellow;
 }
 
 .top-cloud {
   position: absolute;
-  right: 300px;
+  right: 500px;
   top: 50px;
   visibility: visible;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
-  bottom: 300px;
+  left: 500px;
+  bottom: 200px;
+}
+
+.pro {
+  text-decoration: underline;
+  font-weight: bolder;
+}
+
+.skill-row {
+  width: 50%;
+  text-align: left;
+  margin: 25px auto 25px auto;
+  line-height: 2;
+}
+
+.giphy-embed {
+  margin: 0;
+}
+
+.BUTTON_WKT {
+   background: #17FFA5;
+   background-image: -webkit-linear-gradient(top, #17FFA5, #09BB37);
+   background-image: -moz-linear-gradient(top, #17FFA5, #09BB37);
+   background-image: -ms-linear-gradient(top, #17FFA5, #09BB37);
+   background-image: -o-linear-gradient(top, #17FFA5, #09BB37);
+   background-image: -webkit-gradient(to bottom, #17FFA5, #09BB37);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   color: #0059A0;
+   font-family: 'Merriweather', serif;
+   font-size: 36px;
+   font-weight: 300;
+   padding: 19px;
+   -webkit-box-shadow: -2px 1px 20px 0 #000000;
+   -moz-box-shadow: -2px 1px 20px 0 #000000;
+   box-shadow: -2px 1px 20px 0 #000000;
+   text-shadow: 1px 1px 20px #000000;
+   border: solid #030A13 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+   text-align: center;
+   margin-bottom: 50px;
+}
+
+.BUTTON_WKT:hover {
+   border: solid #337FED 1px;
+   background: #85D01E;
+   background-image: -webkit-linear-gradient(top, #85D01E, #3DF65F);
+   background-image: -moz-linear-gradient(top, #85D01E, #3DF65F);
+   background-image: -ms-linear-gradient(top, #85D01E, #3DF65F);
+   background-image: -o-linear-gradient(top, #85D01E, #3DF65F);
+   background-image: -webkit-gradient(to bottom, #85D01E, #3DF65F);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   text-decoration: none;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
+}
+
+.copyright {
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
